crates/ox_content_renderer/tests/snapshots/renderer/sanitize_escapes_inline_raw_html.snap
---
source: crates/ox_content_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "<span>ok</span>\n"
---
<p>&lt;span&gt;ok&lt;/span&gt;</p>
